--- a/test_files/.editorconfig
+++ b/test_files/.editorconfig
@@ -10,6 +10,11 @@ indent_style = space
 indent_size = 4
 tab_width = 8
 
+[6_space.txt]
+indent_style = space
+indent_size = 3
+tab_width = 6
+
 [space.txt]
 indent_style = space
 indent_size = tab
